# kedro-talk

./: .pre-commit-config.yaml  README.md  config.yml  pyproject.toml  stats.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
conf/: logging.yml
conf/base/: globals.yml
conf/base/catalog/: 01_raw.yml  02_intermediate.yml  08_reporting.yml
src/kedro_talk/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kedro_talk/pipelines/_02_intermediate/: nodes.py  pipeline.py
src/kedro_talk/pipelines/_08_reporting/: nodes.py  pipeline.py
